fix: correct nav-bar right padding to esnure the get started button aligns well with hero section content padding

--- a/css/app.css
+++ b/css/app.css
@@ -67,9 +67,8 @@ footer {
     padding-top: 16px;
     padding-bottom: 220px;
     padding-left: 16px;
-    padding-right: 220px;
     justify-content: space-between;
-    height: 161px;
+    height: 132px;
 }
 
 .certification-section {
